--- a/src/components/ui/CustomInput.scss
+++ b/src/components/ui/CustomInput.scss
@@ -10,7 +10,7 @@
 
 label {
   color: #344051;
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
@@ -24,11 +24,12 @@ input {
   flex: 1 0 0;
   border: none;
   color: #637083;
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5rem; /* 150% */
+  line-height: 1.5rem;
+  outline: none;
 }
 
 .input-content {
@@ -39,11 +40,15 @@ input {
   align-self: stretch;
   border-radius: 8px;
   border: 1px solid var(--Neutral-Gray-300, #ced2da);
+
+  &:focus-within {
+    outline: auto;
+  }
 }
 
 .hint {
   color: #637083;
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
