--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,17 +1,15 @@
 @font-face {
     font-family: 'Inter';
-    src: url('/fonts/Inter-Regular.woff2') format('woff2'),
-         url('/fonts/Inter-Regular.woff') format('woff');
+    src: url('../assets/fonts/Inter-Medium.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Inter';
-    src: url('/fonts/Inter-Bold.woff2') format('woff2'),
-         url('/fonts/Inter-Bold.woff') format('woff');
+    src: url('../assets/fonts/Inter-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
-  }
+}
