--- a/src/components/ui/CustomInput.scss
+++ b/src/components/ui/CustomInput.scss
@@ -1,5 +1,3 @@
-
-
 .input-wrapper {
   display: flex;
   width: 20rem;
@@ -10,7 +8,7 @@
 
 label {
   color: #344051;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
@@ -24,7 +22,7 @@ input {
   flex: 1 0 0;
   border: none;
   color: #637083;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
@@ -39,19 +37,49 @@ input {
   gap: 8px;
   align-self: stretch;
   border-radius: 8px;
-  border: 1px solid var(--Neutral-Gray-300, #ced2da);
+  border: 1px solid #ced2da;
 
   &:focus-within {
-    outline: auto;
+    outline: auto #4c94ff;
+    border: 1px solid #4c94ff;
+    box-shadow: 0px 0px 0px 2px #99c2ff;
+  }
+}
+
+.input-content-error {
+  border: 1px solid #f64c4c;
+
+  &:focus-within {
+    outline: auto #f98686;
+    box-shadow: 0px 0px 0px 2px #fccece;
+    border: 1px solid var(--Error-300, #f98686);
   }
 }
 
 .hint {
   color: #637083;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.25rem; /* 142.857% */
+  line-height: 0.3rem;
 }
 
+.error {
+  color: #f64c4c;
+  font-family: "Inter", sans-serif;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.3rem;
+}
+
+.info-icon,
+.error-icon {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.error-icon {
+  color: #f64c4c;
+}
